Fix header in booking page causing profile menu to go off screen when shrinking web page

--- a/src/app/book/[url]/book.module.scss
+++ b/src/app/book/[url]/book.module.scss
@@ -45,8 +45,7 @@
 .header {
   width: 100%;
   height: 250px;
-  flex-shrink: 0;
-  flex-grow: 0;
+  min-height: 35px;
 }
 .page {
   height: 100%;
@@ -54,7 +53,7 @@
   position: relative;
   white-space: nowrap;
 
-  padding: 120px 100px 120px;
+  padding: 120px 100px 0px;
 
   display: flex;
   justify-content: center;
